[package]
edition = "2021"
readme = "README.md"
name = "lpc11test"
version = "0.1.0"

[dependencies]
#cortex-m = "0.5.8"
cortex-m = "0.7.6"
#cortex-m-rt = "0.6.5"
cortex-m-rt = "0.7.1"
#cortex-m-semihosting = "0.3.2"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
lpc11uxx = "0.3.0"

# Uncomment for the panic example.
# panic-itm = "0.4.0"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# [dependencies.stm32f30x]
# features = ["rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "lpc11test"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
